# clawd

./: .env.example  .gitattributes  .gitignore  .keep_intended.txt  AGENTS.md  AUDIT.md  AUDIT_README.md  AUDIT_SCOPE.md  AUDIT_SNAPSHOT.md  CODEX_AIN_PROMPT.md  CONTRIBUTING.md  CONTRIBUTING_AUDIT.md  DESIGN_MODEL_ROUTER.md  DESIGN_MODEL_ROUTER_STEP_B.md  DESIGN_SKILLS_BRIEF.md  DESIGN_SKILLS_INSTALL.md  GENESIS.md  HEARTBEAT.md  IDENTITY.md  MEMORY.md  MODEL_ROUTING.md  README.md  SELF_IMPROVEMENT_CONSTITUTION.md  SKILLS_ENABLEMENT_SUMMARY.md  SOUL.md  SYSTEM_CONTRIBUTION_GUIDE.md  TOOLS.md  TWENTY_EVOLUTIONS.md  USER.md  VERIFICATION.md  dialogues_of_the_curious.md  env.template  openclaw.ps1  package-lock.json  package.json  requirements.txt  secrets.env.template
.openclaw/: workspace-state.json
archive/: OpenClaw_Integration_Setup_Guide.docx  OpenClaw_Integration_Setup_Guide.html  artifact_pipeline.js  coding_agent_system.js  (+43 more)
workspace/research/hmbea_3090_blueprint/: README.md  pyproject.toml
workspace/research/hmbea_3090_blueprint/configs/: model_registry.yaml
workspace/research/hmbea_3090_blueprint/docs/: benchmark_plan.md  data_governance.md  model_stack.md  plan_audit.md
workspace/research/hmbea_3090_blueprint/evals/: promptfoo.yaml
workspace/research/hmbea_3090_blueprint/policies/: escalation_policy.yaml  tool_policy.yaml
workspace/research/hmbea_3090_blueprint/scripts/: benchmark_stub.py  launch_llama_cpp.sh  launch_vllm.sh
workspace/research/hmbea_3090_blueprint/src/hmbea/: clients.py  config.py  graph.py  main.py  schemas.py  validators.py
(+2523 files in other folders)
